--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.18.1",
     "pg": "^7.11.0",
     "react": "^16.8.6",
